# enguard

./: .dockerignore  .editorconfig  .gitignore  .markdownlintrc  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  Dockerfile  LICENSE  Makefile  Pipfile  README.md  README.rst  package.json  pytest.ini  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/ISSUE_TEMPLATE/: docs.md  experiment.md  feature_request.md  project.md
docs/: Makefile  conf.py  enguard.rst  index.rst  installation.rst  make.bat  modules.rst  specs.rst  usage.rst
enguard/: __init__.py  cli.py  config.py  enguard.py  experiments.py  hooks.py  io.py  util.py
scripts/: check.sh  test.sh  watch-tests.sh
tests/: __init__.py  conftest.py  drivers.py  test_enguard.py  test_experiments.py  test_util.py  util.py
tests/e2e/: test_enguard.py  test_init.py  test_run_hook.py
tests/experiments/: test_experiments.py  test_githooks.py
tests/integration/: test_hook_io.py
tests/unit/: test_config.py  test_hook.py  test_util.py
