[metadata]
name = enguard
version = attr: enguard.__version__
description = Build tight feedback loops. In minutes.
author = James W. Dunne
author_email = james@thefreshuk.com
url = https://github.com/jwdunne/enguard
long_description_content_tyoe="text/markdown"
long_description = file:README.md
license = MIT

[options]
python_requires = >=3.6
zip_safe = false
install_requires =
    click>=7.1.1
    PyDriller>=1.14
    GitPython>=3.1.1

[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:enguard/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs,build,.git,.tox
max-line-length = 88
extend-ignore = E203

[isort]
combine_as_imports = True
include_trailing_comma = True
known_first_party = enguard
line_length = 88

[mypy]
python_version = 3.8

[aliases]
# Define setup.py command aliases here
test = pytest

[tool:pytest]
collect_ignore = ['setup.py']

